src-ken&y/objects/Order_Forecast__c.object
<CustomObject>
    <customHelpPage>HelpOrderForecasts</customHelpPage>
    <description>Order Forecast for MRP</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Order Forecasts</relationshipLabel>
        <relationshipName>Order_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumed_Quantity__c</fullName>
        <description>Quantity of forecast consumed by actual orders</description>
        <inlineHelpText>Forecast quantity consumed by actual orders.</inlineHelpText>
        <label>Consumed Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumption_End_Date__c</fullName>
        <label>Consumption End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consumption_Start_Date__c</fullName>
        <label>Consumption Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Order Forecasts</relationshipLabel>
        <relationshipName>Order_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility that Order Forecast is for.</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Order Forecasts</relationshipLabel>
        <relationshipName>Order_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Quantity__c</fullName>
        <description>Forecasted quantity</description>
        <label>Forecast Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Item being forecasted</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Forecasts</relationshipLabel>
        <relationshipName>Order_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <description>Date MRP to plan forecast</description>
        <label>Plan Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <description>Foreccast Quantity minus Consumed Quantity</description>
        <formula>Forecast_Quantity__c  -  Consumed_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining Quantity = Forecast Quantity - Consumed Quantity.</inlineHelpText>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Order Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Facility__c</columns>
        <columns>Item__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Forecast_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Forecast</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>Company cannot change once the record has been created</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company,  Order Forecast cannot change Company.</errorMessage>
    </validationRules>
</CustomObject>